# ava-webhook

./: .env.example  .gitignore  AGENTS.md  Aschettino, Ava- Resume.docx  README.md  architecture_mermaid.html  config.json  generator.py  issue.md  jobs.db  pyproject.toml  receiver.gs  run.sh  scout.py  scratch_extract.py  setup.sh  test_dispatch.py  test_playwright.py  test_scrape.py  watcher.py
assets/: (ava)Migrating Prompts To Langfuse.md  Aschettino, Ava - Cover Letter Template.docx  architecture.md  architecture_wow.html  resume.txt  template.txt
drafts/: 360PRplus_CoverLetter.docx  360PRplus_ResumeDraft.docx  AMC_Global_Media_CoverLetter.docx  AMC_Global_Media_CoverLetter.txt  AMC_Global_Media_ResumeDraft.docx  AMC_Global_Media_ResumeDraft.txt  A_CoverLetter.docx  A_CoverLetter.txt  A_ResumeDraft.docx  A_ResumeDraft.txt  Anonymous_Content_CoverLetter.docx  Anonymous_Content_ResumeDraft.docx  Aquent_CoverLetter.docx  Aquent_CoverLetter.txt.bak  Aquent_ResumeDraft.docx  Aquent_ResumeDraft.txt  Atlas_Search_CoverLetter.docx  Atlas_Search_CoverLetter.txt  Atlas_Search_ResumeDraft.docx  Atlas_Search_ResumeDraft.txt  B_CoverLetter.docx  B_CoverLetter.txt  B_ResumeDraft.docx  B_ResumeDraft.txt  Blue_Hour_Studios_CoverLetter.docx  Blue_Hour_Studios_ResumeDraft.docx  Boost_Company_CoverLetter.docx  Boost_Company_CoverLetter.txt  Boost_Company_ResumeDraft.docx  Boost_Company_ResumeDraft.txt  Catalyst_Brands_LLC_CoverLetter.docx  Catalyst_Brands_LLC_CoverLetter.txt  Catalyst_Brands_LLC_CoverLetter.txt.bak  Catalyst_Brands_LLC_ResumeDraft.docx  Condé_Nast_CoverLetter.docx  (+117 more)
(+68 files in other folders)
